Add root in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,11 @@
     list-style: none;
     text-decoration: none;
 }
+:root {
+    --main-color:#ff702a;
+    --text-color:#fff;
+    --bg-color:#1e1c2a;
+    --big-font:5rem;
+    --h2-font:2.25rem;
+    --p-font:0.9rem;
+}
