Add header style

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,15 @@ body {
     color: var(--text-color);
     background: var(--bg-color);
 }
+header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 170px;
+    background: var(--bg-color);
+}
