Add navbar styles

--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,16 @@ header {
     font-weight: 600;
     font-size: 2.4rem;
 }
+.navbar {
+    display:flex;
+}
+.navbar a {
+    color: var(--text-color);
+    font-size: 1.1rem;
+    padding: 10px 20px;
+    font-weight: 500;
+}
+.navbar a:hover {
+    color: var(--main-color);
+    transition: .4s;
+}
