Add menu-icon style

--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,8 @@ header {
     color: var(--main-color);
     transition: .4s;
 }
+#menu-icon {
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
+}
