--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,11 @@ header {
 section {
     padding: 70px 17%;
 }
+.home {
+    width: 100%;
+    min-height: 90vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1.5rem;
+    align-items: center;
+}
