Add home text h1 & h2 styles

--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,11 @@ section {
     width: 600px;
     height: auto;
 }
+.home-text h1 {
+    font-size: var(--big-font);
+    color: var(--main-color);
+}
+.home-text h2 {
+    font-size: var(--h2-font);
+    margin: 1rem 0 2rem;
+}
