--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,14 @@ section {
     font-size: var(--h2-font);
     margin: 1rem 0 2rem;
 }
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background: var(--main-color);
+    color: #fff;
+    border-radius: 0.5rem;
+}
+.btn:hover {
+    transform: scale(1.2) translateY(10px);
+    transition: .4s;
+}
