--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,14 @@ section {
     width: 480px;
     height: auto;
 }
+.about-text span {
+    color:var(--main-color) ;
+    font-weight: 600;
+}
+.about-text h2 {
+    font-size: var(--h2-font);
+}
+.about-text p {
+    margin: 0.8rem 0 1.8rem;
+    line-height: 1.7;
+}
