--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,13 @@ section {
     margin: 0.8rem 0 1.8rem;
     line-height: 1.7;
 }
+.heading {
+    text-align: center;
+}
+.heading span {
+    color: var(--main-color);
+    font-weight: 600;
+}
+.heading h2 {
+    font-size: var(--h2-font);
+}
