--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,9 @@ section {
 .heading h2 {
     font-size: var(--h2-font);
 }
+.menu-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+    grid-gap: 1.5rem;
+    align-items: center;
+}
