Add box and box-img styles

--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,23 @@ section {
     grid-gap: 1.5rem;
     align-items: center;
 }
+.box {
+    position: relative;
+    margin-top: 4rem;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #feeee7;
+    padding: 20px;
+    border-radius: 0.5rem;
+}
+.box-img {
+    width: 220px;
+    height: 220px;
+}
+.box-img img {
+    width: 100%;
+    height: 100%;
+}
