--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,27 @@ section {
     width: 100%;
     height: 100%;
 }
+.box h2 {
+    font-size: 1.3rem;
+    color: var(--bg-color);
+}
+.box h3 {
+    color:var(--bg-color);
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 4px 0 10px;
+}
+.box span {
+    font-size: var(--p-font);
+    color: var(--main-color);
+    font-weight: 600;
+}
+.box .bx {
+    background: var(--main-color);
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 20px;
+    padding: 7px 10px;
+    border-radius: 0 0.5rem 0 0.5rem;
+}
