Add services-container and s.box styles

--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,13 @@ section {
     padding: 7px 10px;
     border-radius: 0 0.5rem 0 0.5rem;
 }
+.services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, auto));
+    grid-gap: 1.5rem;
+    margin-top: 4rem;
+}
+.s.box {
+    text-align: center;
+    padding: 20px 30px;
+}
