Add s.box img, h3 and p styles

--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,18 @@ section {
     grid-gap: 1.5rem;
     margin-top: 4rem;
 }
-.s.box {
+.s-box {
     text-align: center;
     padding: 20px 30px;
+}
+.s-box img {
+    width: 90px;
+}
+.s-box h3 {
+    margin: 4px 0 10px;
+    color: var(--main-color);
+    font-size: 1.2rem;
+}
+.s-box p {
+    line-height: 1.7;
 }
