Add col and col h4 styles

--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,21 @@ section {
 .footer {
     padding: 10px 0;
 }
+.col {
+    width: 25%;
+}
+.col h4 {
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-bottom: 25px;
+    position: relative;
+}
+.col h4::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 50px;
+    left: 0;
+    bottom: -8px;
+    background: var(--main-color);
+}
