Change bg color

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 :root {
     --main-color:#ff702a;
     --text-color:#fff;
-    --bg-color:#1e1c2a;
+    --bg-color:#241818;
     --big-font:5rem;
     --h2-font:2.25rem;
     --p-font:0.9rem;
