--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,45 @@ section {
     color: var(--bg-color);
     background: var(--text-color);
 }
+
+
+@media (max-width: 1560px) {
+    header {
+        padding: 15px 40px;
+    }
+    :root {
+        --big-font:3.5rem;
+        --h2-font:2rem;
+    }
+}
+@media (max-width: 1140px) {
+    section {
+        padding: 50px 8%;
+    }
+    #menu-icon {
+        display: initial;
+        color: var(--text-color);
+    }
+    header .navbar {
+        position: absolute;
+        top: -400px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background: #3f2a24;
+        transition: .3s;
+    }
+    header .navbar.active {
+        top: 70px;
+    }
+    .navbar a {
+        padding: 1.5rem;
+        display: block;
+    }
+    .col {
+        width: 50%;
+        margin-bottom: 10px;
+    }
+}
