--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,27 @@ section {
         margin-bottom: 10px;
     }
 }
+@media (max-width: 720px) {
+    header {
+        padding: 10px 16px;
+    }
+    .home {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about-img {
+        order: 2;
+    }
+    section {
+        padding: 100px 7%;
+    }
+}
+@media (max-width: 575px) {
+    .col {
+        width: 100%;
+    }
+}
